# Design-Patterns-Studying

./: CMakeLists.txt  README.md  rebrand_project.py
Behavioral/: AcyclicVisitor.cpp  CMakeLists.txt  ClassicVisitor.cpp  Command.cpp  Interpreter_Lexical&Parsing.cpp  Memento.cpp  Multimethods.cpp  README.md  Strategy.cpp
Behavioral/Chain/: BrokerChain.cpp  CMakeLists.txt  PointerChain.cpp
Behavioral/Iterator/: BSTIterator.cpp  CMakeLists.txt  TreeIteratorCoroutine.cpp
Behavioral/Mediator/: CMakeLists.txt
Behavioral/Mediator/ChatRoom/: CMakeLists.txt  ChatRoom.cpp  ChatRoom.h  Person.cpp  Person.h  main.cpp
Behavioral/Mediator/EventBroker/: CMakeLists.txt  main.cpp
Behavioral/Observer/: CMakeLists.txt  Observable.cpp  Observable.h  Observer.cpp  Observer.h  SaferObservable.cpp  SaferObservable.h  main.cpp
Behavioral/State/: CMakeLists.txt  HandmadeStateMachine.cpp  State.cpp  StateMachineWithBoost.cpp
Creational/: CMakeLists.txt  Multiton.cpp  Prototype.cpp  README.md  SingletonDependencyInjection.cpp
Creational/Builder/: Builder.cpp  CMakeLists.txt  GroovyBuilder.cpp
Creational/Factory/: CMakeLists.txt  FactoryMethod.cpp
SOLID/: CMakeLists.txt  DependencyInversion.cpp  InterfaceSegragation.cpp  LiskovSubstitution.cpp  Open-Close.cpp  README.md
Structural/: Adapter.cpp  CMakeLists.txt  Facade.cpp  README.md
Structural/Bridge/: Bridge.cpp  BridgePimpl_ShrinkWrapped.cpp  CMakeLists.txt
Structural/Composite/: ArrayBackedComposite.cpp  CMakeLists.txt  Composite.cpp  CompositeCommand.cpp  NeuralNetworkComposite.cpp
Structural/Proxy/: CMakeLists.txt  (+2 more)
(+12 files in other folders)
