add_executable(AcyclicVisitor AcyclicVisitor.cpp )
add_executable(ClassicVisitor ClassicVisitor.cpp )
add_executable(Command Command.cpp )
add_executable(Interpreter_Lexical_Parsing Interpreter_Lexical&Parsing.cpp )
add_executable(Memento Memento.cpp )
add_executable(Multimethods Multimethods.cpp )
add_executable(Strategy Strategy.cpp )
add_subdirectory(Chain)
add_subdirectory(Iterator)
add_subdirectory(Mediator)
add_subdirectory(Observer)
add_subdirectory(State)
